<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="348dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple_700"
            android:text="@string/tvDos"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTres"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/design_default_color_error"
            android:text="@string/tvTres"
            android:textColor="@color/white" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="226dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_uno"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_dos"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_dos"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_dos"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_tres"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_tres"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:addStatesFromChildren="false">

            <Button
                android:id="@+id/btn_cuatro"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_cuatro"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_cinco"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_cinco"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_seis"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_seis"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_siete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_siete"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_ocho"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_ocho"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/btn_nueve"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_nueve"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_turnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:onClick="pasarTurno"
        android:text="@string/btn_turnos"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btn_reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:onClick="Reiniciar"
        android:text="@string/btn_reiniciar"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintStart_toEndOf="@+id/btn_turnos"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>